archery/archery-svc.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: archery
spec:
  selector:
    app: archery
  ports:
  - name: http
    protocol: TCP
    port: 9123
    targetPort: 9123
