archery/ingress-archery.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: archery-ingress
  annotations:
    kubernetes.io/ingress.class: outside
spec:
  rules:
  - host: archery.test.com
    http:
      paths:
      - path:
        backend:
          serviceName: archery
          servicePort: 9123
